objects/tspa__InviteTechSeeConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Having all the configurations for Visual Remote Assistant - Invite Form Configuration</description>
    <fields>
        <fullName>tspa__Data_Type__c</fullName>
        <description>Used to detect data type of the fields on configuration panel.</description>
        <label>Data Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Dutch_Value__c</fullName>
        <label>Dutch Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__French_Value__c</fullName>
        <label>French Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__German_Value__c</fullName>
        <label>German Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Greek_Value__c</fullName>
        <label>Greek Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Hebrew_Value__c</fullName>
        <label>Hebrew Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Hungarian_Value__c</fullName>
        <label>Hungarian Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Italian_Value__c</fullName>
        <label>Italian Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Japanese_Value__c</fullName>
        <label>Japanese Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Korean_Value__c</fullName>
        <label>Korean Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Label__c</fullName>
        <description>Used to store labels of custom setting name. As it will be visible on configuration panel.</description>
        <label>Label</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Polish_Value__c</fullName>
        <label>Polish Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Portuguese_Value__c</fullName>
        <label>Portuguese Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Russian_Value__c</fullName>
        <label>Russian Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Slovak_Value__c</fullName>
        <label>Slovak Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Sort_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to sort field orders on configuration panel.</description>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__Spanish_Value__c</fullName>
        <label>Spanish Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Swedish_Value__c</fullName>
        <label>Swedish Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Thai_Value__c</fullName>
        <label>Thai Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Turkish_Value__c</fullName>
        <label>Turkish Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Value__c</fullName>
        <label>English Value</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>Visual Remote Assistant - Invite Form</label>
    <listViews>
        <fullName>tspa__Show_Info</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>tspa__Value__c</columns>
        <columns>tspa__Data_Type__c</columns>
        <columns>tspa__Description__c</columns>
        <columns>tspa__Label__c</columns>
        <columns>tspa__Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>Show Info</label>
    </listViews>
</CustomObject>